homeworks/ypodop/module3-lesson8/course-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app-ingress
  namespace: course-app 
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kubernetes.docker.internal
      secretName: course-app-tls
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-app        
                port:
                  number: 8080
